--- a/crud/crud/src/main/resources/application.properties
+++ b/crud/crud/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=crud
 
 spring.datasource.url = jdbc:mysql://localhost:3306/ajaydb
 spring.datasource.username = root
-spring.datasource.password = Ajay@123
+spring.datasource.password = root
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto = update
